--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         .service-card:hover, .gallery-img:hover { transform: scale(1.05); }
         footer { background-color: #111; }
     </style>
+    <meta name="google-site-verification" content="D73-JSJjwMHc_qUpo9_aAZNbcO2JSI1ardlJlX9b_-8" />
 </head>
 <body>
 
@@ -191,3 +192,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
